--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "^5.9.2",
     "@react-navigation/material-bottom-tabs": "^5.2.18",
@@ -26,7 +27,8 @@
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "^2.10.1",
     "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.2"
+    "react-navigation": "^4.4.2",
+    "react-navigation-header-buttons": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
