--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "^2.10.1",
+    "react-native-tags": "^2.2.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.2",
     "react-navigation-header-buttons": "^5.0.2"
