--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-native-tags": "^2.2.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.2",
-    "react-navigation-header-buttons": "^5.0.2"
+    "react-navigation-header-buttons": "^5.0.2",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
